Kubernetes/cilium/nodeport-hubble-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: hubble-ui-nodeport
  namespace: kube-system
spec:
  type: NodePort
  ports:
  - name: hubble-ui
    port: 80
    targetPort: 8081
    nodePort: 31000
  selector:
    k8s-app: hubble-ui
