Kubernetes/cilium/manifest_gateway-API.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 80     # is the external port exposed most likely 80 or 443
    name: web-gw
    allowedRoutes:
      namespaces:
        from: Same
        # bepaald welke namespaces zijn toegelaten. in de HTTPRoute part of the gateway api  you can define the namespace.
        # Same betekend dat route is toegelaten als de gateway in dezelfde namespace zit als de service

---
# This is a httproute for routing to a service based on the FQDN request.

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httproute-example
spec:
  hostnames:
  - my.example.com



---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-app-1
spec:
  hostnames:
  - my.example.com
  parentRefs:
  - name: my-gateway
    namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /details
    backendRefs:
    - name: details
      port: 9080
  - matches:
    - headers:
      - type: Exact
        name: magic
        value: foo
      queryParams:
      - type: Exact
        name: great
        value: example
      path:
        type: PathPrefix
        value: /
      method: GET
    backendRefs:
    - name: productpage
      port: 9080
